gitops/apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home-assistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostAliases:
        - ip: "10.100.20.204"
          hostnames:
            - "unifi.amer.home"
      hostNetwork: true
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - "10.100.20.241"
          - "8.8.8.8"
          - "1.1.1.1"
        searches:
          - "amer.home"
          - "merenda.home.arpa"
        options:
          - name: "ndots"
            value: "2"
          - name: "edns0"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - homeassistant
              topologyKey: kubernetes.io/hostname
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - NET_BROADCAST
                - SYS_ADMIN
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2"
          ports:
            - name: http
              containerPort: 8123
              hostPort: 8123
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exit 0
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exit 0
            initialDelaySeconds: 0
            periodSeconds: 60
            timeoutSeconds: 35
            failureThreshold: 1
          volumeMounts:
            - name: config
              mountPath: /config
            - name: automations
              mountPath: /config/automations
            - name: blueprints
              mountPath: /config/blueprints/automation/_defaults
              readOnly: true
            - name: helpers-input-boolean
              mountPath: /config/helpers/input_boolean
              readOnly: true
            - name: helpers-input-datetime
              mountPath: /config/helpers/input_datetime
              readOnly: true
            - name: helpers-input-select
              mountPath: /config/helpers/input_select
              readOnly: true
            - name: helpers-input-number
              mountPath: /config/helpers/input_number
              readOnly: true
            - name: helpers-input-text
              mountPath: /config/helpers/input_text
              readOnly: true
            - name: dashboards
              mountPath: /config/dashboards/views
              readOnly: true
            - name: scripts
              mountPath: /config/scripts
              readOnly: true
            - name: groups
              mountPath: /config/groups.yaml
              subPath: groups.yaml
              readOnly: true
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","kill -TERM 1 && sleep 5"]
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
        - name: automations
          configMap:
            name: homeassistant-automations
        - name: blueprints
          configMap:
            name: homeassistant-blueprints
        - name: helpers-input-boolean
          configMap:
            name: homeassistant-helpers-input-boolean
        - name: helpers-input-datetime
          configMap:
            name: homeassistant-helpers-input-datetime
        - name: helpers-input-select
          configMap:
            name: homeassistant-helpers-input-select
        - name: helpers-input-number
          configMap:
            name: homeassistant-helpers-input-number
        - name: helpers-input-text
          configMap:
            name: homeassistant-helpers-input-text
        - name: dashboards
          configMap:
            name: homeassistant-dashboards
        - name: scripts
          configMap:
            name: homeassistant-scripts
        - name: groups
          configMap:
            name: homeassistant-groups
