gitops/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home.amer.home,ha.amer.home,homeassistant.amer.home
    external-dns.alpha.kubernetes.io/ttl: "3600"
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
    - port: 8123
      protocol: TCP
      targetPort: 8123
